increases code editor font size; hopefully prevents zooming on mobile

--- a/app/components/CodeEditor/CodeEditor.css
+++ b/app/components/CodeEditor/CodeEditor.css
@@ -190,6 +190,10 @@
 .panel-content.ace_dark {
   background-color: var(--dark-3);
 
+  & textarea {
+    font-size: 16px;
+  }
+
   & + .drawer > .title {
     background-color: var(--dark-3);
     border-bottom: none;
